<resources>
    <string name="app_name">Chinatown Tour</string>
    <string name="transport_button">Transport</string>
    <string name="food_button">Food</string>
    <string name="hotel_button">Hotel</string>
    <string name="activities_button">Activities</string>
    <string name="history_button">History</string>
    <string name="itinerary_button">Itinerary</string>
    <string name="hotel1_name">The Leon Hotel</string>
    <string name="hotel1_address">125 Canal St, New York, NY 10002</string>
    <string name="hotel1_description_preview"> Set at the foot of the Manhattan Bridge in Chinatown, this hip hotel with a midcentury-modern vibe...</string>
    <string name="hotel1_description">Set at the foot of the Manhattan Bridge in Chinatown, this hip hotel with a midcentury-modern vibe is a 3-minute walk from the Grand Street subway station and an 8-minute walk from the Museum Of Chinese In America.
    Sleek, contemporary rooms offer complimentary Wi-Fi, iPod docks and flat-screen TVs, in addition to Keurig coffeemakers. Upgraded rooms and 1-bedroom suites add bridge or city views.
    Off-site parking is available for a fee.</string>
    <string name="hotel1_images" translatable="false"> </string>
    <string name="hotel1_website_link" translatable="false">http://www.leonhotelnyc.com/</string>
    <string name="hotel1_phone_number" translatable="false"> (212) 390-8833   </string>
    <string name="hotel1_maplink" translatable="false">https://goo.gl/maps/BQLSoVjoVpA2 </string>
    <string name="hotel2_name">Hotel Mimosa</string>
    <string name="hotel2_description_preview"> Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero... </string>
    <string name="hotel2_address">79 Division St, New York, NY 10002</string>
    <string name="hotel2_description">Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero. All rooms include a flat-screen TV. The rooms have a private bathroom fitted with a bathtub or shower. Extras include free toiletries and a hairdryer. You will find a 24-hour front desk at the property. One World Trade Center is one mile from Hotel Mimosa, and National September 11 Memorial &amp; Museum is 1.1 miles from the property. The nearest airport is LaGuardia Airport, 7 miles from Hotel Mimosa.</string>
    <string name="hotel2_images" translatable="false"> </string>
    <string name="hotel2_website_link" translatable="false">https://www.hotelmimosany.com/</string>
    <string name="hotel2_phone_number" translatable="false">  (212) 343-4243  </string>
    <string name="hotel2_maplink" translatable="false">https://goo.gl/maps/iMHEMe8qv4P2</string>
    <string name="hotel3_name">Wyndham Garden Chinatown</string>
    <string name="hotel3_address">93 Bowery, New York, NY 10002</string>
    <string name="hotel3_description_preview"> Relax in beautifully designed guest rooms and suites with contemporary furnishings, private balconies and floor to ceiling windows with stunning views of the city...</string>
    <string name="hotel3_description">Relax in beautifully designed guest rooms and suites with contemporary furnishings, private balconies and floor to ceiling windows with stunning views of the city. Savor seasonal American cuisine at the Wu Room. A recipient of the TripAdvisor Certificate of Excellence, our modern Manhattan hotel features intimate event space, complimentary Wi-Fi, and a dynamic ambiance where you can meet, lounge and dine in the beautiful Big Apple. Located in an eclectic Lower Manhattan neighborhood, it\'s easy to explore local nightlife, walk to the trendy shops of SoHo, and dine in Little Italy. </string>
    <string name="hotel3_images" translatable="false">None</string>
    <string name="hotel3_website_link" translatable="false">http://www.wyndhamgardenchinatownnyc.com/</string>
    <string name="hotel3_phone_number" translatable="false"> (646) 329-3400   </string>
    <string name="hotel3_maplink" translatable="false">https://goo.gl/maps/zvMyrbDsDqt</string>
    <string name="hotel4_name">Hotel Mulberry</string>
    <string name="hotel4_address">52 Mulberry St, New York, NY 10013</string>
    <string name="hotel4_description_preview"> Overlooking Columbus Park, this contemporary Chinatown hotel is 0.3 miles from Little Italy and a 5-minute walk from the nearest subway station...    </string>
    <string name="hotel4_description"> Overlooking Columbus Park, this contemporary Chinatown hotel is 0.3 miles from Little Italy and a 5-minute walk from the nearest subway station. Casual rooms and suites are decorated in a neutral palette with custom furnishings and offer pillow-top mattresses, flat-screen TVs and minifridges; some include terraces and/or city views. High-speed Internet access is available. Perks include free continental breakfast daily, a business center and a modern lobby with seating areas. Several fine and casual dining options are within a block of the hotel.</string>
    <string name="hotel4_images" translatable="false">None</string>
    <string name="hotel4_website_link" translatable="false">http://www.hotelmulberry.com/</string>
    <string name="hotel4_phone_number" translatable="false"> (212) 385-4633   </string>
    <string name="hotel4_maplink" translatable="false"> https://goo.gl/maps/V1tHt73LCsR2 </string>
    <string name="hotel5_name">Hotel 50 Bowery NYC</string>
    <string name="hotel5_address">50 Bowery, New York, NY 10013</string>
    <string name="hotel5_description_preview">Hotel 50 Bowery is located in the Chinatown neighborhood in New York City, just 0.9 miles from Ground Zero... </string>
    <string name="hotel5_description">Hotel 50 Bowery is located in the Chinatown neighborhood in New York City, just 0.9 miles from Ground Zero. Guests can enjoy the on-site bar. Private parking is available on site.Each room at this hotel is air conditioned and has a flat-screen TV. Certain rooms have a sitting area for your convenience. A terrace or balcony are featured in certain rooms. The rooms have a private bathroom. For your comfort, you will find free toiletries and a hairdryer.You will find a 24-hour front desk at the property. One World Trade Center is 0.9 miles from Hotel 50 Bowery, and National September 11 Memorial &amp; Museum is 0.9 miles away. The nearest airport is LaGuardia Airport, 7 miles from Hotel 50 Bowery.</string>
    <string name="hotel5_images" translatable="false">None</string>
    <string name="hotel5_website_link" translatable="false">https://www.jdvhotels.com/hotels/new-york/nyc/hotel-50-bowery-nyc</string>
    <string name="hotel5_phone_number" translatable="false"> (212) 508-8000   </string>
    <string name="hotel5_maplink" translatable="false">https://goo.gl/maps/1NQrfZ6Kntv </string>
    <string name="hotel6_name">Best Western Bowery Hanbee Hotel</string>
    <string name="hotel6_address">231 Grand St, New York, NY 10013</string>
    <string name="hotel6_description_preview">Located in downtown Manhattan, this hotel is steps from Little Italy and 400 feet from the Grand Street Subway station... </string>
    <string name="hotel6_description">Located in downtown Manhattan, this hotel is steps from Little Italy and 400 feet from the Grand Street Subway station. It features guest rooms with flat-screen TVs and free Wi-Fi. Every room at the Best Western Bowery Hanbee Hotel provides coffee facilities. Each includes cable TV with in-room movies and a variety of international TV channels. A gym and a business center are available at the hotel. Bowery Hanbee Best Western Hotel also offers laundry facilities and a 24-hour front desk. Bowery Hanbee Hotel is within walking distance of the fabulous shopping of SoHo and the vibrant Chinatown area. Ground Zero is one mile away. </string>
    <string name="hotel6_images" translatable="false">None</string>
    <string name="hotel6_website_link" translatable="false">http://www.bw-boweryhanbeehotel.com/</string>
    <string name="hotel6_phone_number" translatable="false"> (212) 925-1177   </string>
    <string name="hotel6_maplink" translatable="false"> https://goo.gl/maps/e9N2TbeY6N92 </string>
    <string name="hotel7_name">Hotel 91</string>
    <string name="hotel7_address">91 E Broadway, New York, NY 10002</string>
    <string name="hotel7_description_preview"> In Manhattan’s Lower East Side, Hotel 91 is a 5-minute walk from Chinatown and the East Broadway subway station...</string>
    <string name="hotel7_description">In Manhattan’s Lower East Side, Hotel 91 is a 5-minute walk from Chinatown and the East Broadway subway station. It offers free wired internet and rooms with flat-screen cable TVs. Guest rooms include desks, hairdryers and alarm clock radios. A wakeup service is available. Hotel 91 offers a 24-hour front desk, ATM, and laundry facilities. Little Italy is a 10-minute walk from Hotel 91 while Ground Zero and South Street Seaport are 20 minutes away. Brooklyn Bridge and Wall Street are less than one mile away.
    </string>
    <string name="hotel7_images" translatable="false">None</string>
    <string name="hotel7_website_link" translatable="false">http://www.hotel91.com/</string>
    <string name="hotel7_phone_number" translatable="false"> (212) 266-6800   </string>
    <string name="hotel7_maplink" translatable="false">https://goo.gl/maps/Yq4ZQci14fC2 </string>
    <string name="hotel8_name">U.S. Pacific Hotel</string>
    <string name="hotel8_address">276 Canal St, New York, NY 10013</string>
    <string name="hotel8_description_preview">Located in the Bowery neighborhood in New York City, one mile from One World Trade Center, U.S. Pacific Hotel features... </string>
    <string name="hotel8_description">Located in the Bowery neighborhood in New York City, one mile from One World Trade Center, U.S. Pacific Hotel features air-conditioned rooms with free WiFi throughout the property. Each room is fitted with a flat-screen TV. Ground Zero is one mile from U.S. Pacific Hotel, and National September 11 Memorial &amp;amp; Museum is one mile away. LaGuardia Airport is 7 miles from the property. </string>
    <string name="hotel8_images" translatable="false">None</string>
    <string name="hotel8_website_link" translatable="false">http://sohogardenhotel.com/</string>
    <string name="hotel8_phone_number" translatable="false"> (212) 226-0300   </string>
    <string name="hotel8_maplink" translatable="false">https://goo.gl/maps/AbKNTXSW2rw </string>
    <string name="hotel9_name">Tribeca blu</string>
    <string name="hotel9_address">blu hotel, New York, NY 10013</string>
    <string name="hotel9_description_preview"> Tribeca Blu sits on a busy downtown intersection of Canal Street and Broadway. The location does afford an urban feel with ... </string>
    <string name="allow_location_textview">Allow Location</string>
    <string name="email_editText_hint">Please enter your E-mail.</string>
    <string name="language_change_textview">Change Language</string>
    <string name="feedback_textview">Feedback</string>
    <string name="feedback_edittext">Please enter your feedback.</string>
    <string name="submit_feedback_button">Submit Feedback</string>
    <string name="m14a_bus">M14A Bus Route</string>
    <string name="m14a_bus_description">If you are in West Village, Flatiron District, Gramercy Park or East Village you can take the M14A bus that will take you into the Lower East Side into Chinatown.</string>
    <string name="m21_bus">M21 Bus Route</string>
    <string name="m21_bus_description">Depending on where you are from Hudson Square to the Lower East Side, you can take the M21 bus to get across Manhattan.</string>
    <string name="m15_bus">M15 Bus Route</string>
    <string name="m15_bus_description">You can take the M15 bus almost from anywhere in Manhattan. If you are in the west side of Manhattan you will have to walk east. This bus goes from Harlem to lower Manhattan. </string>
</resources>