<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ahmed.niaz.chinatown_tour.MainActivity">


    <Button
        android:id="@+id/transport_landing_pg"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center"
        android:text="@string/transport_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toStartOf="@+id/food_landing_pg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hotel_landing_pg"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:gravity="bottom|center"
        android:text="@string/hotel_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toStartOf="@+id/poi_landing_pg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transport_landing_pg" />

    <Button
        android:id="@+id/itinerary_landing_pg"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:gravity="bottom|center"
        android:text="@string/itinerary_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toStartOf="@+id/history_landing_pg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_landing_pg" />

    <Button
        android:id="@+id/food_landing_pg"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="12dp"
        android:gravity="bottom|center"
        android:text="@string/food_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBaseline_toBaselineOf="@+id/transport_landing_pg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/transport_landing_pg" />

    <Button
        android:id="@+id/poi_landing_pg"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:gravity="bottom|center"
        android:text="@string/poi_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hotel_landing_pg"
        app:layout_constraintTop_toBottomOf="@+id/food_landing_pg" />

    <Button
        android:id="@+id/history_landing_pg"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:gravity="bottom|center"
        android:text="@string/history_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itinerary_landing_pg"
        app:layout_constraintTop_toBottomOf="@+id/poi_landing_pg" />


</android.support.constraint.ConstraintLayout>
