<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/m21_bus_map"
            android:layout_width="338dp"
            android:layout_height="228dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/m21_bus_route"
            tools:layout_editor_absoluteY="45dp" />

        <TextView
            android:id="@+id/m21_bus_textView"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/m21_bus"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/m21_bus_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/m21_bus_description_textView"
            android:layout_width="337dp"
            android:layout_height="59dp"
            android:text="@string/m21_bus_description"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="@+id/m21_bus_map"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/m21_bus_map"
            app:layout_constraintTop_toBottomOf="@+id/m21_bus_map" />

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m21_bus_description_textView" />

        <TextView
            android:id="@+id/m14a_bus_textView"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/m14a_bus"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/m21_bus_textView"
            app:layout_constraintStart_toStartOf="@+id/m21_bus_textView"
            app:layout_constraintTop_toBottomOf="@+id/m21_bus_description_textView" />

        <ImageView
            android:id="@+id/m14a_bus_map"
            android:layout_width="0dp"
            android:layout_height="228dp"
            app:layout_constraintEnd_toEndOf="@+id/m21_bus_map"
            app:layout_constraintStart_toStartOf="@+id/m21_bus_map"
            app:layout_constraintTop_toBottomOf="@+id/m14a_bus_textView"
            app:srcCompat="@drawable/m14a_bus_route" />

        <TextView
            android:id="@+id/m14a_bus_description_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/m14a_bus_description"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="@+id/m21_bus_description_textView"
            app:layout_constraintStart_toStartOf="@+id/m21_bus_description_textView"
            app:layout_constraintTop_toBottomOf="@+id/m14a_bus_map" />

        <View
            android:id="@+id/divider4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m14a_bus_description_textView" />

        <TextView
            android:id="@+id/m15_bus_textview"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/m15_bus"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/m14a_bus_textView"
            app:layout_constraintStart_toStartOf="@+id/m14a_bus_textView"
            app:layout_constraintTop_toBottomOf="@+id/m14a_bus_description_textView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="228dp"
            app:layout_constraintEnd_toEndOf="@+id/m14a_bus_map"
            app:layout_constraintStart_toStartOf="@+id/m14a_bus_map"
            app:layout_constraintTop_toBottomOf="@+id/m15_bus_textview"
            app:srcCompat="@drawable/m15_bus_route" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/m15_bus_description"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="@+id/m14a_bus_description_textView"
            app:layout_constraintStart_toStartOf="@+id/m14a_bus_description_textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>